--- a/works/index.html
+++ b/works/index.html
@@ -64,6 +64,95 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://aliconso.com/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron05 move">
+                            <video class="background-video" src="../assets/img/aliconsoLandingPage.mp4" muted loop></video>
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Desarrollo de landing page</h1>
+                                <p class="ft-p-regul">Aliconso</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://lapistapadelclub.com/americanos/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron06 move">
+                            <video class="background-video" src="../assets/img/americanosLaPistaPadel.mp4" muted loop></video>
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Sistema de torneos americanos</h1>
+                                <p class="ft-p-regul">La pista padel</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://environmental-fl.com/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron07 move">
+                            <video class="background-video" src="../assets/img/enviromentalFL.mp4" muted loop></video>
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Desarrollo web corporativa</h1>
+                                <p class="ft-p-regul">Enviromental experts</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://www.vytabrand.com/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron08 move">
+                            <video class="background-video" src="../assets/img/vytaBrand.mp4" muted loop></video>
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Shopify ecommerce</h1>
+                                <p class="ft-p-regul">Vytabrand</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://divine-perfums.com/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron09 move">
+                            <video class="background-video" src="../assets/img/divinePerfums.mp4" muted loop></video>
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Shopify ecommerce</h1>
+                                <p class="ft-p-regul">Divine perfums</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://anzoateguifc.com/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron10 move">
+                            <video class="background-video" src="../assets/img/anzoateguiFC.mp4" muted loop></video>
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Web corporativa</h1>
+                                <p class="ft-p-regul">Anzoátegui Fútbol Club</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://agritradeinternational.com/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron11 move">
+                            <video class="background-video" src="../assets/img/agritrade.mp4" muted loop></video>
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Landing Page</h1>
+                                <p class="ft-p-regul">Agritrade international</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://agritradeinternational.com/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron12 move">
+                            <video class="background-video" src="../assets/img/playerBasket.mp4" muted loop></video>
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Sistema lista de players</h1>
+                                <p class="ft-p-regul">Players basket</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </main>
