Feat: add new works

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <body class="bg-dark">
   <div class="wave">
-    <span style="--item:1"><img src="../assets/img/logo/r.svg" class="logo-height" alt=""></span>
-    <span style="--item:2"><img src="../assets/img/logo/a.svg" class="logo-height" alt=""></span>
-    <span style="--item:3"><img src="../assets/img/logo/m.svg" class="logo-height" alt=""></span>
-    <span style="--item:4"><img src="../assets/img/logo/o.svg" class="logo-height" alt=""></span>
-    <span style="--item:5"><img src="../assets/img/logo/n.svg" class="logo-height" alt=""></span>
-    <span style="--item:6"><img src="../assets/img/logo/punto.svg" class="punto-height" alt=""></span>
-    <span style="--item:7"><img src="../assets/img/logo/l.svg" class="logo-height" alt=""></span>
+    <span style="--item:1"><img src="./assets/img/logo/r.svg" class="logo-height" alt=""></span>
+    <span style="--item:2"><img src="./assets/img/logo/a.svg" class="logo-height" alt=""></span>
+    <span style="--item:3"><img src="./assets/img/logo/m.svg" class="logo-height" alt=""></span>
+    <span style="--item:4"><img src="./assets/img/logo/o.svg" class="logo-height" alt=""></span>
+    <span style="--item:5"><img src="./assets/img/logo/n.svg" class="logo-height" alt=""></span>
+    <span style="--item:6"><img src="./assets/img/logo/punto.svg" class="punto-height" alt=""></span>
+    <span style="--item:7"><img src="./assets/img/logo/l.svg" class="logo-height" alt=""></span>
   </div>
 
   <main class="main d-none">
