--- a/works/index.html
+++ b/works/index.html
@@ -25,7 +25,29 @@
             <a class="fixed-top px-3 py-2 text-light" style="text-decoration: none;" href="../index.html">volver</a>
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
-                    <a style="text-decoration: none;" target="_blank" href="https://marabanteam.com/">
+                    <a style="text-decoration: none;" target="_blank" href="https://lapistapadelclub.com/scoreboard/livescore.html">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron13 move">
+                            <video class="background-video" src="../assets/img/scoreboard.mp4" muted loop></video>
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Marcador de puntajes</h1>
+                                <p class="ft-p-regul">La pista padel</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://smokeitve.com/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron14 move">
+                            <video class="background-video" src="../assets/img/smokeit.mp4" muted loop></video>
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Web tipo cátalogo</h1>
+                                <p class="ft-p-regul">Smokeit</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="#">
                         <div class="p-5 bg-light border border-dark bg-jumbotron01 move">
                             <div class="container-fluid text-light py-5">
                                 <h1 class="pt-5 fw-bold">Desarrollo de one page</h1>
@@ -45,7 +67,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
-                    <a style="text-decoration: none;" target="_blank" href="https://codedealerz.com/SISDECI/">
+                    <a style="text-decoration: none;" target="_blank" href="#">
                         <div class="p-5 bg-light border border-dark bg-jumbotron03">
                             <div class="container-fluid text-light py-5">
                                 <h1 class="pt-5fw-bold">Sistemas de información</h1>
