Feat: add new works

--- a/works/index.html
+++ b/works/index.html
@@ -165,12 +165,34 @@
                     </a>
                 </div>
                 <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
-                    <a style="text-decoration: none;" target="_blank" href="https://agritradeinternational.com/">
+                    <a style="text-decoration: none;" target="_blank" href="#">
                         <div class="p-5 bg-light border border-dark bg-jumbotron12 move">
                             <video class="background-video" src="../assets/img/playerBasket.mp4" muted loop></video>
                             <div class="container-fluid text-light py-5">
                                 <h1 class="pt-5 fw-bold">Sistema lista de players</h1>
                                 <p class="ft-p-regul">Players basket</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://briqual.com/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron15 move">
+                            <video class="background-video" src="../assets/img/briqual.mp4" muted loop></video>
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Web corporativa</h1>
+                                <p class="ft-p-regul">Briqual</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://aquafrodita.com/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron16 move">
+                            <video class="background-video" src="../assets/img/aquafrodita.mp4" muted loop></video>
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Ecommerce</h1>
+                                <p class="ft-p-regul">Aqua Afrodita</p>
                             </div>
                         </div>
                     </a>
